<resources>
    <string name="app_name">Architekt</string>
    <string name="processed_image">Processed Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_image">description</string>
    <string name="loading">loading...</string>
    <string name="sample">sample</string>
    <string name="scan_document">scan document</string>
    <string name="live_shape_detection">live shape detection</string>
    <string name="back">back</string>
    <string name="new_project">new project</string>
    <string name="camera">camera</string>
    <string name="visualization">3d visualization</string>
    <string name="company_icon">company icon\n</string>
    <string name="company_name">stone face</string>
    <string name="add_step">image procesinng pipeline steps</string>
    <string name="close_pipeline_dialog">close pipeline dialog</string>
    <string name="parameter_adjustments">parameter adjustments</string>
    <string name="close_add_pipeline_dialog">close add pipeline step</string>
    <string name="step_icon">pipeline step</string>
</resources>