<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="viewModel"
            type="com.stone.architekt.pipelineControl.PipelineControlDialogViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_transparent"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/steps_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/plus_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/add_step"
                android:src="@drawable/ic_plus"
                app:tint="@color/icon_color" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/steps_paramaeters_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/steps_container"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/parameter_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/parameter_adjustments"
                android:textColor="@color/light_text"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/parameter_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progressTint="@color/seekbar_color"
                android:thumbTint="@color/seekbar_thumb_color" />

            <TextView
                android:id="@+id/parameter_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_text"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:contentDescription="@string/close_pipeline_dialog"
            android:src="@drawable/ic_arrow_downward"
            app:tint="@color/icon_color" />

    </RelativeLayout>
</layout>